# -Herramientas-Computacionales

2020-08-28-git/: README.txt
2020-09-01-num-err/: eps.cpp  overflow.cpp  sum.cpp
2020-09-04-num-err-II/: tarea.cpp
2020-09-09-makefiles/: makefile
2020-09-11-std-numlib/: legendre.cpp  random.cpp
2020-09-16-programinginstall/: eigenexample.cpp  mathplotplusplus.cpp
2020-09-18-programinginstall-II/: a.out
2020-09-23-debugging-I/: a.out  example2.cpp
2020-09-25-debugging-II/: a.out  sefault.cpp
2020-09-30-UnitTesting/: example1.cpp  test_catch2.cpp  test_factorial.cpp
2020-10-07-profiling-I/: a.out  gmon.out  manualtiming.cpp  profile.txt
2020-10-09-profiling-II/: makefile
2020-10-14-lybraries/: a.out  eigen.cpp  sol_eigen.cpp
2020-10-16-numericallib-II/: datos.txt  run.sh
2020-10-20-moleculardynamics-I/: md-v1.cpp
2020-10-30-HPC-intro/: a.out  mpi-example.cpp  openmp-example.cpp
2020-11-13-MPI-I/: a.out  mpi.cpp
2020-11-18-MPI-II/: a.out
2020-11-25-MPI-exercises-pointopoint/: a.out  pingpong.cpp  ring.cpp
2020-11-27-collective/: a.out
2020-12-02-MPI-Laplace-I/: a.out
2020-12-09-MPI-Laplace-II/: Laplace-MPI-v2.cpp  Laplace-MPI-v3.cpp  Laplace-MPI-v4.cpp  a.out
ejercicios/: 01-primes.cpp  1.cpp  2.cpp  laplace.cpp  makefile  plot.gp  prueba.cpp
ejercicios/b_project/: CMakeLists.txt
ejercicios/b_project/include/: CMakeLists.txt  atom.hpp
ejercicios/b_project/src/: CMakeLists.txt  main.cpp
ejercicios/exam1/: 1.cpp  1.gp  2.cpp  a.out  makefile
ejercicios/final_project/: class.cpp  main.cpp
ejercicios/laplace/: laplace.cpp  (+5 more)
(+10036 files in other folders)
